--- a/scss/style.scss
+++ b/scss/style.scss
@@ -659,6 +659,10 @@ header {
   height: 50vh;
   div{
     flex-basis: 33%;
+    font-size: 18px;
+  }
+  .menu_subcategory{
+    font-size: 16px;
   }
 }
 
@@ -716,6 +720,10 @@ header {
         transform: translate(60px, 20px)rotate(45deg);
       }
     }
+  }
+
+  .mobile_category_menu {
+    display: none;
   }
   .menu_service_img{
     @include WhiteStripes;
@@ -3277,6 +3285,11 @@ div{
   .mob_menu {
     display: flex;
   }
+  .dropdown_container {
+    display: none;
+    flex-direction: column;
+    color: white;
+  }
   nav {
     height: 65px;
   }
@@ -3341,9 +3354,9 @@ div{
 
   #menu {
     position: absolute;
-    width: 180px;
-    height: 400px;
-    //box-shadow: 0 0 10px #85888C;
+    width: 280px;
+    height: 100vh;
+
     margin: -50px 0 0 -50px;
     padding: 125px 50px 50px 50px;
     background-color: #171717;;
@@ -3360,6 +3373,9 @@ div{
 
   #menuToggle input:checked ~ ul {
     transform: none;
+  }
+  .dropdown_container {
+    padding: 0 25px;
   }
 
   .main_our_works .main_our_works_img_wrapper .main_gallery {
@@ -3709,11 +3725,26 @@ div{
     top: -110px;
   }
   .service_wrapper {
-    padding: 2em 1em;
+    padding: 2em 25px;
     height: 120vh;
+  }
+
+  .main_service_wrapper .mobile_category_menu{
+    display: flex;
+
+    .dropdown_container{
+      font-size: 16px;
+      margin: 20px 0;
+    }
+  }
+  .menu_category, .menu_subcategory{
+    display: none;
   }
   .main_service_container {
     height: 120vh;
+  }
+  .service_wrapper div {
+    flex-basis: 100%;
   }
   .main_service_wrapper .main_service_top_container {
     justify-content: center;
@@ -3901,6 +3932,16 @@ div{
     width: 325px;
     height: 215px;
   }
+  .about_us .about_us_top .triangles2 {
+    top: 100px;
+  }
+  .about_us .about_us_center .about_us_right {
+    height: 15em;
+  }
+  .about_us .about_us_top .triangles2 img:nth-child(2) {
+    display: none;
+  }
+
   .about_us .about_us_center .about_us_right:before {
     left: 10px;
     top: -15px;
@@ -4056,6 +4097,9 @@ div{
     display: flex;
     flex-direction: column;
   }
+  .news_wrapper .subcategory_fix {
+    height: 100vh;
+  }
   .blog .xxx1 {
     margin: 0;
     padding: 0;
@@ -4094,5 +4138,104 @@ div{
   }
   .more_posts {
     margin: 0 25px;
+  }
+  //Blog
+  .blog .blog_top_container {
+    justify-content: center;
+  }
+  .blog_top_container div .fs36_r {
+    margin: 25px 0;
+  }
+  .bp {
+    height: 20vh;
+  }
+  .blog_wrapper.slogan_wrapper {
+   margin: 0 25px;
+ }
+  .blog_top_img_container::after {
+    height: 171px;
+    width: 171px;
+    right: -25px;
+    bottom: -20px;
+  }
+  .blog_wrapper {
+    height: 80vh;
+  }
+  .blog .blog_title {
+    margin-top: 60px;
+    width: 100%;
+  }
+  .post_container {
+    margin: 0 25px;
+  }
+  .xxx9::before {
+    display: none;
+  }
+  //Category
+  .category_wrapper{
+    background-color: #171717;
+
+    .category_container {
+      margin: 0 25px;
+    }
+  }
+  .category_wrapper .slogan_wrapper .subcategory_list {
+    align-self: auto;
+  }
+  .category_wrapper .category_top_container .category_top_triangles img:first-child {
+    transform: none;
+  }
+  .category_container .service_triangles {
+    top: 135px;
+  }
+  .category_wrapper .category_top_container .category_top_triangles {
+    bottom: -30px;
+  }
+  .category_container .service_triangles img:last-child {
+    width: 40px;
+    height: 40px;
+  }
+  .category_container .service_triangles img:first-child,.category_container .service_triangles img:nth-child(2) {
+    display: none;
+  }
+  .category_wrapper .slogan_wrapper .subcategory_list ul {
+    margin: 0;
+  }
+  .category_fix2 {
+
+    padding-top: 60px;
+  }
+  .category_wrapper .category_container .xxx1::after {
+    display: none;
+  }
+  .category_wrapper .category_top_container {
+    margin-bottom: 65px;
+  }
+  .category_wrapper .slogan_wrapper .category_slogan {
+    width: 100%;
+  }
+  .category_wrapper .slogan_wrapper .subcategory_list ul li {
+    font-size: 16px;
+  }
+
+  .slogan_wrapper{
+    margin: 0 25px;
+  }
+  .slogan_wrapper .subcategory_img_container::before {
+    display: none;
+  }
+  .slogan_wrapper .subcategory_img_container div:nth-child(2), .slogan_wrapper .subcategory_img_container div:nth-child(3) {
+    margin: 0;
+  }
+  .slogan_wrapper .subcategory_img_container div img {
+    width: 300px;
+    height: 205px;
+  }
+  .slogan_wrapper .subcategory_img_container::after {
+    left: -25px;
+    right: 0;
+    bottom: 75px;
+    height: 700px;
+    width: 80px;
   }
 }
