--- a/scss/style.scss
+++ b/scss/style.scss
@@ -515,7 +515,7 @@ header {
   top: -100px;
 }
 .nav-down {
-  background-color: #171717;
+  background-color: transparent;
 }
 .logo:hover {
   color: #e9150b;
